--- a/frdmk64f_scheduler_fifo/.cproject
+++ b/frdmk64f_scheduler_fifo/.cproject
@@ -667,4 +667,6 @@
 		<core>cm4</core>
 		<coreId>core0_MK64FN1M0xxx12</coreId>
 	</storageModule>
+	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
