--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /.metadata/
 /.mcuxpressoide_packages_support
 *.launch
+*.o
+./.mcuxpressoide_packages_support/MK64FN1M0xxx12_support/Flash/FTFE_4K.cfx
+./frdmk64f_scheduler_priority/Debug/frdmk64f_scheduler_fifo.axf
